# Laverna

./: .woodpecker.yml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
export/: laverna-x86_64  laverna-x86_64-mcp
formulas/: atomic_seed.toml
src/: lib.rs  main.rs  strategy.rs
src/astrology/: mod.rs
src/bankai/: diagnostics.rs  protocol.rs  verifier.rs
src/chart/: mod.rs
src/descent/: mod.rs
src/entity/: mod.rs
src/ephemeris/: mod.rs
src/formula/: mod.rs  registry.rs
src/optimize/: mod.rs
src/primitive/: mod.rs
src/sandbox/: mod.rs
src/tanto/: mod.rs  parser.rs
src/zanpakuto/: mod.rs
tests/: energy_efficiency_integration.rs  self_classification.rs
