[package]
name = "laverna"
version = "0.1.0"
edition = "2021"
description = "Vedic reasoning engine — 9-graha wheel, NAND-to-bankai compute"
authors = ["nutypebuddha <nutypebuddha@proton.me>"]
license = "MIT"
publish = false
keywords = ["reasoning", "vedic", "formula", "cross-domain", "mcp"]
categories = ["science", "mathematics", "compilers"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }

# Pattern matching
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"

# TOML parsing
toml = "0.8"

# Compute
vsop87 = "3.0.0"
astro = "2.0.0"
sha2 = "0.10"
xalen-vedic = "0.6"
xalen-houses = "0.6"
xalen-ayanamsa = "0.6"
xalen-time = "0.6"
xalen-coords = "0.6"

# MCP Server (optional)
rmcp = { version = "2.2", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread"], optional = true }

# Web search / World Bank stats (optional)
ureq = { version = "2", default-features = false, features = ["json", "tls"], optional = true }

# LLM Integration (optional)
llama-gguf = { version = "0.10", features = ["cpu"], optional = true }

# Benchmark harness (optional)
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[dev-dependencies]
tempfile = "3"
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[features]
default = []  # minimal: no heavy deps, fast builds
mcp = ["dep:rmcp", "dep:tokio", "websearch"]
websearch = ["dep:ureq"]
budget = []
bench = ["dep:criterion"]
llm = ["dep:llama-gguf", "dep:tokio"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
debug = 0

[profile.dev]
opt-level = 0
debug = 0

[profile.ci]
inherits = "release"
debug = 0
strip = "symbols"
